--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "material-table": "1.50.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "typescript": "3.3.3"
